--- a/group_tags/zh_CN.yaml
+++ b/group_tags/zh_CN.yaml
@@ -33,6 +33,7 @@
       color: rgba(255, 123, 2, .4)
       tags:
         1girl: 1女孩
+        a_beautiful_girl: 1个漂亮女孩
         1boy: 1男孩
         2girls: 2女孩
         2boys: 2男孩
